--- a/css/material-design/materialize_sandbox_start/3_2_breadcrumbs.html
+++ b/css/material-design/materialize_sandbox_start/3_2_breadcrumbs.html
@@ -129,12 +129,12 @@
 
   <!-- BREADCRUMB -->
   <nav>
-    <div>
-      <div>
-        <div>
-          <a href="#">Home</a>
-          <a href="#">Users</a>
-          <a href="#">Brad</a>
+    <div class="grey">
+      <div class="container">
+        <div class="col s12">
+          <a href="#" class="breadcrumb">Home</a>
+          <a href="#" class="breadcrumb">Users</a>
+          <a href="#" class="breadcrumb">Brad</a>
         </div>
       </div>
     </div>
@@ -144,8 +144,31 @@
   <br>
 
   <!-- FOOTER -->
-  <footer>
-
+  <footer class="page-footer grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h5 class="grey-text tex-lighten-3">About</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex commodi odio, facere reprehenderit voluptate
+            quos illo blanditiis perspiciatis deleniti.</p>
+        </div>
+        <div class="col s12 m4 offset-m2">
+          <h5 class="grey-text tex-lighten-3">links</h5>
+          <ul>
+            <li href="#" class="white-text">Link</li>
+            <li href="#" class="white-text">Link</li>
+            <li href="#" class="white-text">Link</li>
+            <li href="#" class="white-text">Link</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright grey darken-2">
+      <div class="container">
+        Copyright &copy; 2020
+        <a href="#" class="grey-text text-lighten-3 right">Termos e Condições</a>
+      </div>
+    </div>
   </footer>
 
 
