--- a/css/material-design/materialize_sandbox_teacher/3_2_breadcrumbs.html
+++ b/css/material-design/materialize_sandbox_teacher/3_2_breadcrumbs.html
@@ -149,7 +149,8 @@
       <div class="row">
         <div class="col s12 m6">
           <h5 class="grey-text text-lighten-3">About Us</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, reprehenderit. Error saepe nesciunt, commodi
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, reprehenderit. Error saepe nesciunt,
+            commodi
             eos quae libero? Quis, explicabo unde!</p>
         </div>
         <div class="col s12 m4 offset-m2">
