--- a/materialize_themes/quazu/index.html
+++ b/materialize_themes/quazu/index.html
@@ -26,13 +26,13 @@
     <nav class="transparent">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Neneca</a>
+          <a href="#" class="brand-logo">Couves Tech</a>
           <a href="#" data-activates="andre-mobile-nav" class="button-collapse">
             <i class="fa fa-bars" aria-hidden="true"></i>
           </a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="index.html">Home</a></li>
+            <li><a class="active-link" href="index.html">Home</a></li>
             <li><a href="solutions.html">Solutions</a></li>
             <li><a href="signup.html">Sign up</a></li>
             <li><a href="signup.html" class="btn purple">Login</a></li>
@@ -59,6 +59,18 @@
         </div>
       </div>
     </nav>
+    <!-- Showcase (início) -->
+    <div class="showcase container">
+      <div class="row">
+        <div class="col s12 m10 left">
+          <h5>Python e Django</h5>
+          <h1>Estudar não precisa ser chato</h1>
+          <p>Feito por pessoas como você!</p>
+          <a href="solutions.html" class="btn btn-large white purple-text">Saiba mais</a>
+          <a href="solutions.html" class="btn btn-large purple white-text">Sign Up</a>
+        </div>
+      </div>
+    </div>
   </header>
 
   <!-- Import jQuery antes do materialize.js-->
