--- a/materialize/materialize_sandbox_start/3_6_chips_pagination.html
+++ b/materialize/materialize_sandbox_start/3_6_chips_pagination.html
@@ -9,7 +9,6 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Materialize Sandbox</title>
 </head>
 
@@ -121,83 +120,103 @@
     <!-- ./ MENU ROW END -->
     <br>
     <br>
-
     <!-- START HERE -->
-
     <!-- CHIPS -->
-    <div>
-      Web development
-    </div>
-    <div>
-      Web design
-    </div>
-    <div>
-      Programming
-    </div>
+    <section>
+      <h4>Chips - padrão</h4>
+      <div class="chip">
+        Web development
+        <i class="close material-icons">close</i>
+      </div>
+      <div class="chip">
+        Web design
+        <i class="close material-icons">close</i>
+      </div>
+      <div class="chip">
+        Programming
+        <i class="close material-icons">close</i>
+      </div>
+    </section>
 
     <br>
     <br>
 
     <!-- CHIPS WITH CLOSE -->
-    <div>
-      Web development
-      <i></i>
-    </div>
-    <div>
-      Web design
-      <i></i>
-    </div>
-    <div>
-      Programming
-      <i></i>
-    </div>
+    <section>
+      <h4>Chips - com função close</h4>
+      <div class="chip">
+        Web development
+        <i class="close material-icons">close</i>
+      </div>
+      <div class="chip">
+        Web design
+        <i class="close material-icons">close</i>
+      </div>
+      <div class="chip">
+        Programming
+        <i class="close material-icons">close</i>
+      </div>
+    </section>
 
     <br>
     <br>
-
+    <div class="divider"></div>
     <!-- CHIPS WITH IMAGES -->
-    <div>
-      <img src=""> John Doe
-    </div>
-    <div>
-      <img src=""> Brian Jackson
-    </div>
-    <div>
-      <img src=""> Lori Smith
-    </div>
-
+    <section>
+      <h4>Chips - com imagens</h4>
+      <div class="chip">
+        <img src="img/img1.jpg"> John Doe
+      </div>
+      <div class="chip">
+        <img src="img/img2.jpg"> Brian Jackson
+      </div>
+      <div class="chip indigo darken-4 white-text">
+        <img src="img/img3.jpg"> Lori Smith
+      </div>
+    </section>
+    <div class="divider"></div>
     <!-- CHIPS INPUT WITH AUTOCOMPLETE-->
-    <div></div>
+    <section>
+      <h4>Chips - com Autocomplete</h4>
+      <div class="chips-input"></div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!-- PAGINATION -->
-    <ul>
-      <li>
-        <a href="#!">
-          <i></i>
-        </a>
-      </li>
-      <li>
-        <a href="#!">1</a>
-      </li>
-      <li>
-        <a href="#!">2</a>
-      </li>
-      <li>
-        <a href="#!">3</a>
-      </li>
-      <li>
-        <a href="#!">4</a>
-      </li>
-      <li>
-        <a href="#!">5</a>
-      </li>
-      <li>
-        <a href="#!">
-          <i></i>
-        </a>
-      </li>
-    </ul>
-
+    <h2>Pagination</h2>
+    <section>
+      <h4>Pagination</h4>
+      <ul class="pagination">
+        <li class="disable">
+          <a href="#!">
+            <i class="material-icons">chevron_left</i>
+          </a>
+        </li>
+        <li class="waves-effect active">
+          <a href="#!">1</a>
+        </li>
+        <li class="waves-effect">
+          <a href="#!">2</a>
+        </li>
+        <li class="waves-effect">
+          <a href="#!">3</a>
+        </li>
+        <li class="waves-effect">
+          <a href="#!">4</a>
+        </li>
+        <li class="waves-effect">
+          <a href="#!">5</a>
+        </li>
+        <li>
+          <a href="#!" class="disable">
+            <i class="material-icons">chevron_right</i>
+          </a>
+        </li>
+      </ul>
+    </section>
     <!-- END HERE -->
 
 
@@ -220,9 +239,24 @@
       });
 
       // JAVASCRIPT START HERE //
-
-
-
+      $('.chips-input').material_chip({
+        placeholder: 'digite uma tag',
+        secondaryPlaceholder: 'Digite outra...',
+        autocompleteOptions: {
+          data: {
+            'html': null,
+            'css': null,
+            'javascript': null,
+            'java': null,
+            'python': null,
+            'scss': null,
+            'sass': null,
+          }
+        }
+      });
+      $('.chips-input').on('chip.add', function (e, chip) {
+        console.log(`You added a chip - $(chip.tag)`);
+      });
 
     });
   </script>
