--- a/materialize/materialize_sandbox_start/4_1_carousel.html
+++ b/materialize/materialize_sandbox_start/4_1_carousel.html
@@ -125,75 +125,143 @@
     <!-- START HERE -->
 
     <!-- CAROUSEL -->
-    <div>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-    </div>
-
+    <section>
+      <h4>Carousel Padrão</h4>
+      <div class="carousel" id="carousel-normal">
+        <a class="carousel-item" href="#one!">
+          <img src="img/img1.jpg">
+        </a>
+        <a class="carousel-item" href="#two!">
+          <img src="img/img2.jpg">
+        </a>
+        <a class="carousel-item" href="#three!">
+          <img src="img/img3.jpg">
+        </a>
+        <a class="carousel-item" href="#four!">
+          <img src="img/img4.jpg">
+        </a>
+        <a class="carousel-item" href="#five!">
+          <img src="img/img5.jpg">
+        </a>
+      </div>
+    </section>
     <!-- FULL WIDTH CAROUSEL -->
-    <div>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-      <a href="">
-        <img src="">
-      </a>
-    </div>
+    <section>
+      <h4>Carousel Full Width com effect</h4>
+      <div class="carousel carousel-slider" id="carousel-com-efeito">
+        <a class="carousel-item" href="#one!">
+          <img src="img/img1.jpg">
+        </a>
+        <a class="carousel-item" href="#two!">
+          <img src="img/img2.jpg">
+        </a>
+        <a class="carousel-item" href="#three!">
+          <img src="img/img3.jpg">
+        </a>
+        <a class="carousel-item" href="#four!">
+          <img src="img/img4.jpg">
+        </a>
+        <a class="carousel-item" href="#five!">
+          <img src="img/img5.jpg">
+        </a>
+      </div>
+    </section>
 
+    <section>
+      <h4>Carousel Full Width sem efeito</h4>
+      <div class="carousel carousel-slider" id="carousel-sem-efeito">
+        <a class="carousel-item" href="#one!">
+          <img src="img/img1.jpg">
+        </a>
+        <a class="carousel-item" href="#two!">
+          <img src="img/img2.jpg">
+        </a>
+        <a class="carousel-item" href="#three!">
+          <img src="img/img3.jpg">
+        </a>
+        <a class="carousel-item" href="#four!">
+          <img src="img/img4.jpg">
+        </a>
+        <a class="carousel-item" href="#five!">
+          <img src="img/img5.jpg">
+        </a>
+      </div>
+    </section>
+
+    <section>
+      <h4>Carousel Full Width com effect</h4>
+      <div class="carousel carousel-slider" id="carousel-com-efeito-com-data-indicator" data-indicators="true">
+        <a class="carousel-item" href="#one!">
+          <img src="img/img1.jpg">
+        </a>
+        <a class="carousel-item" href="#two!">
+          <img src="img/img2.jpg">
+        </a>
+        <a class="carousel-item" href="#three!">
+          <img src="img/img3.jpg">
+        </a>
+        <a class="carousel-item" href="#four!">
+          <img src="img/img4.jpg">
+        </a>
+        <a class="carousel-item" href="#five!">
+          <img src="img/img5.jpg">
+        </a>
+      </div>
+    </section>
+
+    <section>
+      <h4>Carousel Full Width sem efeito com data indicator</h4>
+      <div class="carousel carousel-slider" id="carousel-sem-efeito-com-data-indicator" data-indicators="true">
+        <a class="carousel-item" href="#one!">
+          <img src="img/img1.jpg">
+        </a>
+        <a class="carousel-item" href="#two!">
+          <img src="img/img2.jpg">
+        </a>
+        <a class="carousel-item" href="#three!">
+          <img src="img/img3.jpg">
+        </a>
+        <a class="carousel-item" href="#four!">
+          <img src="img/img4.jpg">
+        </a>
+        <a class="carousel-item" href="#five!">
+          <img src="img/img5.jpg">
+        </a>
+      </div>
+    </section>
     <!-- CONTENT SLIDER -->
-    <div>
-      <div href="">
-        <h2>Panel One</h2>
-        <p>This is panel one</p>
-        <div>
-          <a>button</a>
+    <section>
+      <div id="carousel-text" class="carousel carousel-slider center" data-indicators="true">
+        <div class="carousel-item red white-text" href="#one!">
+          <h2>Panel One</h2>
+          <p>This is panel one</p>
+          <div class="carousel-fixed-item center">
+            <a class="btn black">button</a>
+          </div>
+        </div>
+        <div class="carousel-item blue white-text" href="#four!">
+          <h2>Panel One</h2>
+          <p>This is panel one</p>
+          <div class="carousel-fixed-item center">
+            <a class="btn black">button</a>
+          </div>
+        </div>
+        <div class="carousel-item yellow white-text" href="#two!">
+          <h2>Panel One</h2>
+          <p>This is panel one</p>
+          <div class="carousel-fixed-item center">
+            <a class="btn black">button</a>
+          </div>
+        </div>
+        <div class="carousel-item ambar white-text" href="#three!">
+          <h2>Panel One</h2>
+          <p>This is panel one</p>
+          <div class="carousel-fixed-item center">
+            <a class="btn black">button</a>
+          </div>
         </div>
       </div>
-      <div href="">
-        <h2>Panel Two</h2>
-        <p>This is panel two</p>
-        <div>
-          <a>button</a>
-        </div>
-      </div>
-      <div href="">
-        <h2>Panel Three</h2>
-        <p>This is panel three</p>
-        <div>
-          <a>button</a>
-        </div>
-      </div>
-      <div href="">
-        <h2>Panel Four</h2>
-        <p>This is panel four</p>
-        <div>
-          <a>button</a>
-        </div>
-      </div>
-    </div>
-
+    </section>
 
     <!-- END HERE -->
 
@@ -217,7 +285,16 @@
       });
 
       // JAVASCRIPT START HERE //
-
+      $('#carousel-normal').carousel();
+      $('#carousel-text').carousel();
+      $('#carousel-com-efeito').carousel();
+      $('#carousel-sem-efeito').carousel({
+        fullWidth: true,
+      });
+      $('#carousel-com-efeito-com-data-indicator').carousel();
+      $('#carousel-sem-efeito-com-data-indicator').carousel({
+        fullWidth: true,
+      });
 
 
 
